--- a/Data-mediator-demo/app/build.gradle
+++ b/Data-mediator-demo/app/build.gradle
@@ -49,14 +49,14 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.8.2'
 
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.0-beta3'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.0-beta4'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.0'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.0'
     apt 'com.squareup:javapoet:1.9.0'
-    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.1-beta21'
-    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.4'
-    //compile 'com.heaven7.android.data.mediator:data-mediator-android:1.0.5'
+    apt 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.0'
+    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
+    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.0'
 
-    compile project(':data-mediator-android')
+    //compile project(':data-mediator-android')
     //helper util
     compile 'com.heaven7.core.util:util-v1:1.1.2'
     compile 'com.heaven7.android.util2:android-util2:1.1.8'
