--- a/data-binding-test/app/build.gradle
+++ b/data-binding-test/app/build.gradle
@@ -27,12 +27,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     // gson-support( added since 1.2.0)
-    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.4'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.0-beta7'
-
-    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.0-beta3'
-    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.3.1-beta21'
+    compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.0'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.0'
     annotationProcessor 'com.squareup:javapoet:1.9.0'
+    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.0'
+    compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
+    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.1'
 
     // if you want generate annotation of gson。(since 1.2.0 auto added)
     compile "com.google.code.gson:gson:2.8.2"
