--- a/data-binding-test/app/build.gradle
+++ b/data-binding-test/app/build.gradle
@@ -2,9 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.heaven7.data.mediator.data_binding_test"
-        minSdkVersion 15
+        minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -18,21 +19,33 @@ android {
     }
 }
 
+//fix compat of com.android.support.
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '26.1.0'
+            }
+        }
+    }
+}
+
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    testCompile 'com.android.support.test:runner:1.0.1'
+    testCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     // gson-support( added since 1.2.0)
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.0'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.0'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.1'
     annotationProcessor 'com.squareup:javapoet:1.9.0'
-    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.0'
+    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.1'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
-    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.1'
+    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.3'
 
     // if you want generate annotation of gson。(since 1.2.0 auto added)
     compile "com.google.code.gson:gson:2.8.2"
