--- a/data-binding-test/app/src/main/AndroidManifest.xml
+++ b/data-binding-test/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
         <activity android:name=".sample.TestViewBindActivity" android:label="TestViewBind"/>
         <activity android:name=".sample.TestImageViewBindActivity" android:label="ImageViewBind"/>
+        <activity android:name=".sample.adapter.TestDatabindingAdapter" android:label="ImageViewBind"/>
+        <activity android:name=".sample.adapter.DataBindingAdapterWithHeader" android:label="ImageViewBind"/>
     </application>
 
 </manifest>
