--- a/data-binding-test/testgenerate/build.gradle
+++ b/data-binding-test/testgenerate/build.gradle
@@ -2,9 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 26
-
-
-
+    buildToolsVersion "26.0.2"
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 26
@@ -21,21 +19,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
 }
+
+//fix compat of com.android.support.
+/*configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '26.1.0'
+            }
+        }
+    }
+}*/
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    testCompile 'junit:junit:4.12'
+   // androidTestImplementation 'com.android.support.test:runner:1.0.1'
+   // androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     compile 'com.heaven7.java.data.mediator.annotation:data-mediator-annotations:1.2.0'
-    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.0'
+    compile 'com.heaven7.java.data.mediator:data-mediator:1.4.1'
     annotationProcessor 'com.squareup:javapoet:1.9.0'
-    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.0'
+    annotationProcessor 'com.heaven7.java.data.mediator.compiler:data-mediator-compiler:1.4.1'
     compile 'com.heaven7.java.data.mediator.support.gson:data-mediator-support-gson:1.0.5'
-    compile 'com.heaven7.android.data.mediator:data-mediator-android:1.1.1'
 }
